--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,5 @@ dependencies = ["pystac-client>=0.9.0", "pytest>=8.4.1"]
 
 [tool.pytest.ini_options]
 console_output_style = "count"
-addopts = "--verbose --disable-warnings --no-summary"
+#addopts = "--verbose --disable-warnings --no-summary"
 testpaths = ["./"]
